ad about_me.html, change tag line

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <header>
     <h1>4111Spyglass</h1>
-    <p>Precision. Purpose. Possibility.</p>
+    <p>From spark to scale: innovate, collaborate, scale.</p>
   </header>
 
   <main>
@@ -32,6 +32,12 @@
       <h2>Why It Matters</h2>
       <p>From decarbonization to orbital autonomy, our work supports global impact through trust and technical rigor.</p>
     </section>
+	
+	<section>
+      <h2>About Matthias Georg Imhof</h2>
+      <p>Strategic Innovation Architect and scientific software leader with 25+ years of experience spanning geophysics and geosciences, software development, and carbon management. Founder of 4111Spyglass Consulting, Matthias specializes in designing reproducible, modular infrastructure that bridges science, software, and sustainability. With 29 U.S. patents and a Ph.D. from MIT, he empowers teams to simplify complexity, validate models, and build systems that reason with clarity.</p>
+    </section>
+
   </main>
 
   <footer>
