--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <a href="index.html">Home</a> |
     <a href="consulting.html">Consulting</a> |
     <a href="rnd.html">R&D</a>
+    <a href="about_mgi.html">About</a>
   </nav>
 
   <header>
