--- a/about_mgi.html
+++ b/about_mgi.html
@@ -4,31 +4,13 @@
   <meta charset="UTF-8">
   <title>4111Spyglass</title>
   <link rel="stylesheet" href="style.css">
+  <img src="about_mgi_header.png" alt="Meet Matthias Georg Imhof: Architecting clarity across science, software, and sustainability." width="800">
 </head>
 <body>
   <nav>
     <a href="index.html">Home</a> |
     <a href="consulting.html">Consulting</a> |
-    <a href="rnd.html">R&D</a>
-  </nav>
-
-  <header>
-    <h1>4111Spyglass</h1>
-    <p>Precision. Purpose. Possibility.</p>
-  </header>
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>4111Spyglass</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <nav>
-    <a href="index.html">Home</a> |
-    <a href="consulting.html">Consulting</a> |
-    <a href="rnd.html">R&D</a>
+    <a href="rnd.html">R&D</a> |
     <a href="about_mgi.html">About</a>
   </nav>
 
