--- a/consulting.html
+++ b/consulting.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8">
   <title>4111Spyglass Consulting</title>
   <link rel="stylesheet" href="style.css">
+  <img src="consulting_header.png" alt="Innovation for Decarbonization & Energy Transition: CCS, CDR, MRV and scalable infrastructure for carbon markets." width="800">
 </head>
 <body>
   <nav>
     <a href="index.html">Home</a> |
     <a href="consulting.html">Consulting</a> |
-    <a href="rnd.html">R&D</a>
+    <a href="rnd.html">R&D</a> |
+    <a href="about_mgi.html">About</a>
   </nav>
 
   <header>
@@ -31,6 +33,16 @@
     <section>
       <h2>Workshops & Briefings</h2>
       <p>Technical onboarding and educational programs for startups, operators, and government entities.</p>
+    </section>
+
+    <section>
+      <h2>Consulting Services</h2>
+      <ul>
+        <li><strong>Innovation & Strategy:</strong> Pipeline design, planning workshops, proposal development and proposal review.</li>
+        <li><strong>Scientific Computing:</strong> Software architecture, modeling, standards integration.</li>
+        <li><strong>Energy Transition, CCS and Carbon Credits:</strong> MMV/MRV strategy, project planning, education.</li>
+        <li><strong>Collaboration & Facilitation:</strong> Workshops, community building, mentorship.</li>
+      </ul>
     </section>
   </main>
 
