--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <title>4111Spyglass</title>
   <link rel="stylesheet" href="style.css">
+  <img src="index_header.png" alt="From Spark to Scale: Innovate. Collaborate. Sustain. Bridging science, software, and sustainability." width="800">
 </head>
 <body>
   <nav>
     <a href="index.html">Home</a> |
     <a href="consulting.html">Consulting</a> |
-    <a href="rnd.html">R&D</a>
+    <a href="rnd.html">R&D</a> |
     <a href="about_mgi.html">About</a>
   </nav>
 
@@ -33,12 +34,18 @@
       <h2>Why It Matters</h2>
       <p>From decarbonization to orbital autonomy, our work supports global impact through trust and technical rigor.</p>
     </section>
-	
-	<section>
+
+    <section>
+      <h2>Our Philosophy</h2>
+      <p><strong>Vision:</strong> To shape a future where collaborative innovation drives sustainable impact at scale.</p>
+      <p><strong>Mission:</strong> We empower sustainable innovation from spark to scale through collaborations.</p>
+      <p><strong>Value Proposition:</strong> We help science-driven organizations accelerate innovation and scale sustainable solutions by combining deep technical expertise, strategic insight, and collaborative facilitation. With decades of experience in energy transition, scientific computing, and intellectual property strategy, we bridge the gap between ideas and impact—delivering tailored solutions from concept to commercialization.</p>
+    </section>
+
+    <section>
       <h2>About Matthias Georg Imhof</h2>
       <p>Strategic Innovation Architect and scientific software leader with 25+ years of experience spanning geophysics and geosciences, software development, and carbon management. Founder of 4111Spyglass Consulting, Matthias specializes in designing reproducible, modular infrastructure that bridges science, software, and sustainability. With 29 U.S. patents and a Ph.D. from MIT, he empowers teams to simplify complexity, validate models, and build systems that reason with clarity.</p>
     </section>
-
   </main>
 
   <footer>
