--- a/rnd.html
+++ b/rnd.html
@@ -4,12 +4,15 @@
   <meta charset="UTF-8">
   <title>4111Spyglass R&D</title>
   <link rel="stylesheet" href="style.css">
+  <img src="consulting_header.png" alt="R&D for reproducible, trustworthy systems: Exploring scalable solutions in climate tech and 
+software architecture." width="800">
 </head>
 <body>
   <nav>
     <a href="index.html">Home</a> |
     <a href="consulting.html">Consulting</a> |
-    <a href="rnd.html">R&D</a>
+    <a href="rnd.html">R&D</a> |
+    <a href="about_mgi.html">About</a>
   </nav>
 
   <header>
