css for header and taglines

--- a/about_mgi.html
+++ b/about_mgi.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>4111Spyglass</title>
   <link rel="stylesheet" href="style.css">
-  <img src="about_mgi_header.png" alt="Meet Matthias Georg Imhof: Architecting clarity across science, software, and sustainability." width="800">
+  <img src="about_mgi_header.png" alt="Meet Matthias Georg Imhof: Architecting clarity across science, software, and sustainability." width="1000">
 </head>
 <body>
   <nav>
@@ -15,8 +15,10 @@
   </nav>
 
   <header>
-    <h1>4111Spyglass</h1>
-    <p>From spark to scale: innovate, collaborate, scale.</p>
+    <h1>
+	<span class="site-title">Matthias Imhof:</span>
+    <span class="site-tagline">explore, build, collaborate.</span>
+	</h1>
   </header>
 
   <main>
