--- a/consulting.html
+++ b/consulting.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>4111Spyglass Consulting</title>
   <link rel="stylesheet" href="style.css">
-  <img src="consulting_header.png" alt="Innovation for Decarbonization & Energy Transition: CCS, CDR, MRV and scalable infrastructure for carbon markets." width="800">
+  <img src="consulting_header.png" alt="Innovation for Decarbonization & Energy Transition: CCS, CDR, MRV and scalable infrastructure for carbon markets." width="1000">
 </head>
 <body>
   <nav>
@@ -15,8 +15,10 @@
   </nav>
 
   <header>
-    <h1>4111Spyglass Consulting</h1>
-    <p>Innovation for Decarbonization & Energy Transition</p>
+    <h1>
+	<span class="site-title">4111Spyglass Consulting:</span>
+    <span class="site-tagline">Innovation for Decarbonization & Energy Transition</span>
+	</h1>
   </header>
 
   <main>
