--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>4111Spyglass</title>
   <link rel="stylesheet" href="style.css">
-  <img src="index_header.png" alt="From Spark to Scale: Innovate. Collaborate. Sustain. Bridging science, software, and sustainability." width="800">
+  <img src="index_header.png" alt="From Spark to Scale: Innovate. Collaborate. Sustain. Bridging science, software, and sustainability." width="1000">
 </head>
 <body>
   <nav>
@@ -15,8 +15,10 @@
   </nav>
 
   <header>
-    <h1>4111Spyglass</h1>
-    <p>From spark to scale: innovate, collaborate, scale.</p>
+    <h1>
+	<span class="site-title">4111Spyglass:</span>
+    <span class="site-tagline">From spark to scale: innovate, collaborate, scale.</span>
+	</h1>    
   </header>
 
   <main>
