--- a/rnd.html
+++ b/rnd.html
@@ -5,7 +5,7 @@
   <title>4111Spyglass R&D</title>
   <link rel="stylesheet" href="style.css">
   <img src="consulting_header.png" alt="R&D for reproducible, trustworthy systems: Exploring scalable solutions in climate tech and 
-software architecture." width="800">
+software architecture." width="1000">
 </head>
 <body>
   <nav>
@@ -16,8 +16,10 @@ software architecture." width="800">
   </nav>
 
   <header>
-    <h1>4111Spyglass R&D</h1>
-    <p>Embedded Systems, Cubesats & Flight Software</p>
+    <h1>
+	<span class="site-title">4111Spyglass R&D:</span>
+	<span class="site-tagline">Embedded Systems for Autonomous Sensors</span>
+	</h1>
   </header>
 
   <main>
