add email links

--- a/consulting.html
+++ b/consulting.html
@@ -48,8 +48,9 @@
     </section>
   </main>
 
-  <footer>
-    <p>&copy; 2025 4111Spyglass</p>
-  </footer>
+<footer>
+  <p>&copy; 2025 4111Spyglass</p>
+  <p>Contact: <a href="mailto:info@4111spyglass.com">info@4111spyglass.com</a></p>
+</footer>
 </body>
 </html>
