--- a/about_mgi.html
+++ b/about_mgi.html
@@ -122,8 +122,9 @@
 
   </main>
 
-  <footer>
-    <p>&copy; 2025 4111Spyglass</p>
-  </footer>
+<footer>
+  <p>&copy; 2025 4111Spyglass</p>
+  <p>Contact: <a href="mailto:info@4111spyglass.com">info@4111spyglass.com</a></p>
+</footer>
 </body>
 </html>
