--- a/rnd.html
+++ b/rnd.html
@@ -39,8 +39,9 @@ software architecture." width="1000">
     </section>
   </main>
 
-  <footer>
-    <p>&copy; 2025 4111Spyglass</p>
-  </footer>
+<footer>
+  <p>&copy; 2025 4111Spyglass</p>
+  <p>Contact: <a href="mailto:info@4111spyglass.com">info@4111spyglass.com</a></p>
+</footer>
 </body>
 </html>
