tweak style.css and render banners centered

--- a/about_mgi.html
+++ b/about_mgi.html
@@ -4,9 +4,13 @@
   <meta charset="UTF-8">
   <title>4111Spyglass</title>
   <link rel="stylesheet" href="style.css">
-  <img src="about_mgi_header.png" alt="Meet Matthias Georg Imhof: Architecting clarity across science, software, and sustainability." width="1000">
 </head>
+
 <body>
+  <div class="layout">
+  <div class="banner">
+    <img src="about_mgi_header.png" alt="Meet Matthias Georg Imhof: Architecting clarity across science, software, and sustainability.">
+  </div>
   <nav>
     <a href="index.html">Home</a> |
     <a href="consulting.html">Consulting</a> |
@@ -126,5 +130,6 @@
   <p>&copy; 2025 4111Spyglass</p>
   <p>Contact: <a href="mailto:info@4111spyglass.com">info@4111spyglass.com</a></p>
 </footer>
+</div>
 </body>
 </html>
