--- a/consulting.html
+++ b/consulting.html
@@ -4,9 +4,14 @@
   <meta charset="UTF-8">
   <title>4111Spyglass Consulting</title>
   <link rel="stylesheet" href="style.css">
-  <img src="consulting_header.png" alt="Innovation for Decarbonization & Energy Transition: CCS, CDR, MRV and scalable infrastructure for carbon markets." width="1000">
 </head>
+
 <body>
+  <div class="layout">
+  <div class="banner">  
+    <img src="consulting_header.png" alt="Innovation for Decarbonization & Energy Transition: CCS, CDR, MRV and scalable infrastructure for carbon markets.">
+  </div>
+  
   <nav>
     <a href="index.html">Home</a> |
     <a href="consulting.html">Consulting</a> |
@@ -52,5 +57,6 @@
   <p>&copy; 2025 4111Spyglass</p>
   <p>Contact: <a href="mailto:info@4111spyglass.com">info@4111spyglass.com</a></p>
 </footer>
+</div>
 </body>
 </html>
