--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
   <meta charset="UTF-8">
   <title>4111Spyglass</title>
   <link rel="stylesheet" href="style.css">
-  <img src="index_header.png" alt="From Spark to Scale: Innovate. Collaborate. Sustain. Bridging science, software, and sustainability." width="1000">
 </head>
+
 <body>
+  <div class="layout">
+  <div class="banner">
+    <img src="index_header.png" alt="From Spark to Scale: Innovate. Collaborate. Sustain. Bridging science, software, and sustainability.">
+  </div>
+
   <nav>
     <a href="index.html">Home</a> |
     <a href="consulting.html">Consulting</a> |
@@ -54,5 +59,6 @@
   <p>&copy; 2025 4111Spyglass</p>
   <p>Contact: <a href="mailto:info@4111spyglass.com">info@4111spyglass.com</a></p>
 </footer>
+</div>
 </body>
 </html>
