--- a/rnd.html
+++ b/rnd.html
@@ -4,10 +4,15 @@
   <meta charset="UTF-8">
   <title>4111Spyglass R&D</title>
   <link rel="stylesheet" href="style.css">
-  <img src="consulting_header.png" alt="R&D for reproducible, trustworthy systems: Exploring scalable solutions in climate tech and 
-software architecture." width="1000">
 </head>
+
 <body>
+  <div class="layout">
+  <div class="banner">  
+    <img src="rnd_header.png" alt="R&D for reproducible, trustworthy systems: Exploring scalable solutions in climate tech and 
+software architecture.">
+  </div>
+  
   <nav>
     <a href="index.html">Home</a> |
     <a href="consulting.html">Consulting</a> |
@@ -43,5 +48,6 @@ software architecture." width="1000">
   <p>&copy; 2025 4111Spyglass</p>
   <p>Contact: <a href="mailto:info@4111spyglass.com">info@4111spyglass.com</a></p>
 </footer>
+</div>
 </body>
 </html>
