--- a/consulting.html
+++ b/consulting.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>4111Spyglass Consulting</title>
@@ -8,55 +9,59 @@
 
 <body>
   <div class="layout">
-  <div class="banner">  
-    <img src="consulting_header.png" alt="Innovation for Decarbonization & Energy Transition: CCS, CDR, MRV and scalable infrastructure for carbon markets.">
+    <div class="banner">
+      <img src="consulting_header.png"
+        alt="Innovation for Decarbonization & Energy Transition: CCS, CDR, MRV and scalable infrastructure for carbon markets.">
+    </div>
+
+    <nav>
+      <a href="index.html">Home</a> |
+      <a href="consulting.html">Consulting</a> |
+      <a href="rnd.html">R&D</a> |
+      <a href="about_mgi.html">About</a>
+    </nav>
+
+    <header>
+      <h1>
+        <span class="site-title">4111Spyglass Consulting:</span>
+        <span class="site-tagline">Innovation for Decarbonization & Energy Transition</span>
+      </h1>
+    </header>
+
+    <main>
+      <section>
+        <h2>Strategic Innovation</h2>
+        <p>We support technology validation, registry compliance, and MRV strategy across carbon markets.</p>
+      </section>
+
+      <section>
+        <h2>MRV & MMV Expertise</h2>
+        <p>Sensor fusion, monitoring frameworks, and diagnostic infrastructure for credit generation and trust.</p>
+      </section>
+
+      <section>
+        <h2>Workshops & Briefings</h2>
+        <p>Technical onboarding and educational programs for startups, operators, and government entities.</p>
+      </section>
+
+      <section>
+        <h2>Consulting Services</h2>
+        <ul>
+          <li><strong>Innovation & Strategy:</strong> Pipeline design, planning workshops, proposal development and
+            proposal review.</li>
+          <li><strong>Scientific Computing:</strong> Software architecture, modeling, standards integration.</li>
+          <li><strong>Energy Transition, CCS and Carbon Credits:</strong> MMV/MRV strategy, project planning, education.
+          </li>
+          <li><strong>Collaboration & Facilitation:</strong> Workshops, community building, mentorship.</li>
+        </ul>
+      </section>
+    </main>
+
+    <footer>
+      <p>&copy; 2025 4111Spyglass</p>
+      <p>Contact: <a href="mailto:info@4111spyglass.com">info@4111spyglass.com</a></p>
+    </footer>
   </div>
-  
-  <nav>
-    <a href="index.html">Home</a> |
-    <a href="consulting.html">Consulting</a> |
-    <a href="rnd.html">R&D</a> |
-    <a href="about_mgi.html">About</a>
-  </nav>
-
-  <header>
-    <h1>
-	<span class="site-title">4111Spyglass Consulting:</span>
-    <span class="site-tagline">Innovation for Decarbonization & Energy Transition</span>
-	</h1>
-  </header>
-
-  <main>
-    <section>
-      <h2>Strategic Innovation</h2>
-      <p>We support technology validation, registry compliance, and MRV strategy across carbon markets.</p>
-    </section>
-
-    <section>
-      <h2>MRV & MMV Expertise</h2>
-      <p>Sensor fusion, monitoring frameworks, and diagnostic infrastructure for credit generation and trust.</p>
-    </section>
-
-    <section>
-      <h2>Workshops & Briefings</h2>
-      <p>Technical onboarding and educational programs for startups, operators, and government entities.</p>
-    </section>
-
-    <section>
-      <h2>Consulting Services</h2>
-      <ul>
-        <li><strong>Innovation & Strategy:</strong> Pipeline design, planning workshops, proposal development and proposal review.</li>
-        <li><strong>Scientific Computing:</strong> Software architecture, modeling, standards integration.</li>
-        <li><strong>Energy Transition, CCS and Carbon Credits:</strong> MMV/MRV strategy, project planning, education.</li>
-        <li><strong>Collaboration & Facilitation:</strong> Workshops, community building, mentorship.</li>
-      </ul>
-    </section>
-  </main>
-
-<footer>
-  <p>&copy; 2025 4111Spyglass</p>
-  <p>Contact: <a href="mailto:info@4111spyglass.com">info@4111spyglass.com</a></p>
-</footer>
-</div>
 </body>
+
 </html>
