SimpleAnalytics script to track traffic

--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
       <p>Contact: <a href="mailto:info@4111spyglass.com">info@4111spyglass.com</a></p>
     </footer>
   </div>
+
+  <!-- 100% privacy-first analytics -->
+<script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+
 </body>
 
 </html>
