--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
   <!-- 100% privacy-first analytics -->
 <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 
+<script data-goatcounter="https://4111spyglass.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
+
 </body>
 
 </html>
