--- a/about_mgi.html
+++ b/about_mgi.html
@@ -23,7 +23,7 @@
     <header>
       <h1>
         <span class="site-title">Matthias Imhof:</span>
-        <span class="site-tagline">explore, build, collaborate.</span>
+        <span class="site-tagline">Explore, Build, Collaborate.</span>
       </h1>
     </header>
 
