--- a/consulting.html
+++ b/consulting.html
@@ -30,18 +30,34 @@
 
     <main>
       <section>
-        <h2>Strategic Innovation</h2>
-        <p>We support technology validation, registry compliance, and MRV strategy across carbon markets.</p>
+        <p>Our consulting approach is anchored in a triad of capabilities: <strong>Strategic Innovation</strong>, <strong>Monitoring & Diagnostics</strong>, and <strong>Engagement & Enablement</strong>. Together, they form a resilient foundation for scalable, trustworthy solutions across climate, energy, and technology domains.</p>
       </section>
 
       <section>
-        <h2>MRV & MMV Expertise</h2>
-        <p>Sensor fusion, monitoring frameworks, and diagnostic infrastructure for credit generation and trust.</p>
+        <h2>Strategic Innovation & Systems Architecture</h2>
+        <p>We support strategic innovation through technology validation, systems architecture, and scalable pathways for climate and energy solutions.</p>
+
       </section>
 
       <section>
-        <h2>Workshops & Briefings</h2>
-        <p>Technical onboarding and educational programs for startups, operators, and government entities.</p>
+        <h2>Monitoring & Diagnostic Infrastructure</h2>
+        <p>We contribute to monitoring and diagnostic systems through sensor integration, data workflows, and scalable infrastructure for trust and transparency.</p>
+      </section>
+
+      <section>
+        <h2>Workshops, Briefings & Engagement</h2>
+        <p>We offer tailored workshops and briefings to support onboarding, technical literacy, and strategic alignment across sectors.</p>
+      </section>
+
+      <section>
+        <h2>Recent Focus Areas</h2>
+          <p>Our recent work spans key areas of innovation, engagement, and technical support across climate and technology domains.</p>
+          <ul>
+            <li><strong>Training and Outreach</strong> Educational engagements to support awareness, acceptance, and capacity building.</li>
+            <li><strong>Application Support and Review</strong> Advising on applications and proposals, including preparation, refinement, and strategic review.</li>
+            <li><strong>Technology Discovery</strong> Elevating promising innovations through strategic framing and visibility.</li>
+            <li><strong>AI & ML Systems</strong> Supporting model training, validation, and integration into broader workflows.</li>
+          </ul>
       </section>
 
       <section>
