update all pages to new triad format; make the pages consistent with each other's message and tone

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav>
       <a href="index.html">Home</a> |
       <a href="consulting.html">Consulting</a> |
-      <a href="rnd.html">R&D</a> |
+      <a href="rnd.html">R&amp;D</a> |
       <a href="about_mgi.html">About</a>
     </nav>
 
@@ -29,15 +29,18 @@
     </header>
 
     <main>
+    	<section>
+  		<p>Our work spans three domains: <strong>Consulting</strong>, <strong>R&amp;D</strong>, and <strong>Collaboration</strong>. Together, they bridge science, software, and sustainability—enabling innovation from spark to scale.</p>
+		</section>
+		
       <section>
         <h2>Who We Are</h2>
-        <p>4111Spyglass is a systems architecture and innovation studio bridging science, software, and sustainability.
-        </p>
+	        <p>4111Spyglass is a systems architecture and innovation studio bridging science, software, and sustainability.</p>
       </section>
 
       <section>
         <h2>What We Build</h2>
-        <p>Modular systems, diagnostic pipelines, and semantic scaffolding for scalable infrastructure.</p>
+        <p>We build modular systems, diagnostic pipelines, and sensor/software stacks that scale from concept to deployment.</p>
       </section>
 
       <section>
