--- a/consulting.html
+++ b/consulting.html
@@ -40,7 +40,7 @@
       </section>
 
       <section>
-        <h2>Monitoring & Diagnostic Infrastructure</h2>
+        <h2>Monitoring & Diagnostics </h2>
         <p>We contribute to monitoring and diagnostic systems through sensor integration, data workflows, and scalable infrastructure for trust and transparency.</p>
       </section>
 
@@ -66,7 +66,7 @@
           <li><strong>Innovation & Strategy:</strong> Pipeline design, planning workshops, proposal development and
             proposal review.</li>
           <li><strong>Scientific Computing:</strong> Software architecture, modeling, standards integration.</li>
-          <li><strong>Energy Transition, CCS and Carbon Credits:</strong> MMV/MRV strategy, project planning, education.
+          <li><strong>Energy & Climate Solutions:</strong>Strategy, project planning, and education.
           </li>
           <li><strong>Collaboration & Facilitation:</strong> Workshops, community building, mentorship.</li>
         </ul>
